@@ -10,4 +10,4 @@ FROM openjdk:11
 RUN mkdir /app
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/finch_backend-0.0.1-SNAPSHOT.jar
 EXPOSE 8080
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/finch_backend-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/finch_backend-0.0.1-SNAPSHOT.jar"]
